--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/gilroy-bold">
 
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="./css/style.css">
 </head>
 
 <body>
