--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="http://fonts.cdnfonts.com/css/gilroy-bold">
 
 
-    <link href="./css/style.css">
+    <link href="./css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
