update Home button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             </div>
             <audio id="audio" src=""></audio>
         </div>
-        <div class="home-btn"></div>
+        <div class="home-btn">
+            <button></button>
+        </div>
     </div>
     <div id="playingNow"></div>
     <div id="options"></div>
