add search input and style for #timer

--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
             <div class="nav-adjust"></div>
         </div>
         <div class="container">
-            <div class="title">
+            <div class="subbar">
                 HOT Songs
+                <div class="searchBox">
+                    <input type="text" id="search" placeholder="Search...">
+                    <ul id="searchList">
+
+
+                    </ul>
+                </div>
             </div>
             <div class="songList" id="songList">
 
@@ -53,6 +60,7 @@
     </div>
     <div id="playingNow"></div>
     <div id="options"></div>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
 </body>
 
